[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/screens/tower_upgrade.gd" id="1"]

[node name="TowerUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Tower Selection"

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "500 Gold"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TowerGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="UpgradePanel" type="Control" parent="MarginContainer/VBoxContainer/Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="PanelBg" type="ColorRect" parent="MarginContainer/VBoxContainer/Content/UpgradePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.18, 1)

[node name="UpgradeTreeContainer" type="Control" parent="MarginContainer/VBoxContainer/Content/UpgradePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 56)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 20
text = "Continue"
